--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,32 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #009dff;
+  --ifm-color-primary-dark: #008de6;
+  --ifm-color-primary-darker: #0085d9;
+  --ifm-color-primary-darkest: #006eb3;
+  --ifm-color-primary-light: #1aa7ff;
+  --ifm-color-primary-lighter: #26acff;
+  --ifm-color-primary-lightest: #4dbaff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #00eeff;
+  --ifm-color-primary-dark: #00d6e6;
+  --ifm-color-primary-darker: #00cad9;
+  --ifm-color-primary-darkest: #00a7b3;
+  --ifm-color-primary-light: #1af0ff;
+  --ifm-color-primary-lighter: #26f1ff;
+  --ifm-color-primary-lightest: #4df3ff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.hero {
+  background-image: url('~/img/team.png');
+  background-size: cover;
+  background-position: 0% 30%;
+  height: 500px;
 }
